--- a/.github/workflows/run-container.yml
+++ b/.github/workflows/run-container.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '0 0 * * *'
 env:
   CHANNEL: ${{ secrets.CHANNEL }}
   BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
